<resources>
    <string name="app_name">JJabKaoTalk</string>
    <string name="cancel">취소</string>
    <string name="exit">나가기</string>
    <string name="file_provider_authorities">com.grand.duke.elliot.jjabkaotalk.fileprovider</string>
    <string name="search">검색</string>
    <string name="settings">설정</string>
    <string name="sign_in">로그인</string>
    <string name="sign_out">로그아웃</string>
    <string name="unknown">(알 수 없음)</string>
    <string name="you_are_not_logged_in">로그인 되지 않았습니다.</string>

    <!-- Facebook -->
    <string name="facebook_app_id">2757875477807015</string> <string name="fb_login_protocol_scheme">fb2757875477807015</string>

    <!-- Format -->
    <string name="year_month_date_format">yyyy년 M월 d일</string>

    <!-- ProfileCreationActivity -->
    <string name="name">이름</string>
    <string name="complete">완료</string>
    <string name="photo_shoot">사진 촬영</string>
    <string name="select_from_album">앨범에서 선택</string>

    <!-- SignInActivity -->
    <string name="facebook_login">페이스북 로그인</string>
    <string name="failed_to_sign_in">로그인하지 못했습니다.</string>
    <string name="google_sign_in">구글 로그인</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="naver_login">네이버 로그인</string>

    <!-- PhoneAuthenticationFragment -->
    <string name="code_sent">인증번호가 발송되었습니다.</string>
    <string name="enter_code">인증번호 입력</string>
    <string name="invalid_phone_number">전화번호가 유효하지 않습니다.</string>
    <string name="phone_number">전화번호</string>
    <string name="profile_creation_failure_message">프로필을 생성하지 못했습니다.</string>
    <string name="resend">재전송</string>
    <string name="send_code">인증번호 발송</string>
    <string name="verification">본인인증</string>

    <!-- OpenChatRoomsFragment -->
    <string name="chat_room_entry_message">님이 입장하셨습니다.</string>
    <string name="create_open_chat_room">오픈채팅방 만들기</string>
    <string name="open_chat_room_name">오픈채팅방 이름</string>
    <string name="failed_to_load_open_chat_rooms">오픈채팅방을 불러오지 못했습니다..</string>
    <string name="failed_to_create_open_chat_room">오픈채팅방을 만들지 못했습니다.</string>

    <!-- ChatFragment -->
    <string name="failed_to_send_message">메시지를 보내지 못했습니다.</string>
    <string name="open_chat_room_not_found">오픈채팅방을 찾을 수 없습니다.</string>

    <!-- ProfileFragment -->
    <string name="added_to_blacklist">블랙리스트에 추가했습니다.</string>
    <string name="add_to_friends">친구추가</string>
    <string name="block">차단</string>
    <string name="delete_friend">친구삭제</string>
    <string name="friend_added">친구가 추가되었습니다.</string>
    <string name="friends">친구</string>

    <!-- MyChatRoomsFragment -->
    <string name="failed_to_load_chat_rooms">채팅방을 불러오지 못했습니다.</string>
    <string name="my_chat">내 채팅</string>
</resources>