<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layout_background_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/spacing_medium"
                android:paddingEnd="@dimen/spacing_medium_large"
                android:paddingStart="@dimen/spacing_medium_large"
                android:paddingTop="@dimen/spacing_medium"
                android:text="@string/create_open_chat_room"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_openChatRoomName"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:gravity="center_vertical"
                android:hint="@string/open_chat_room_name"
                app:boxBackgroundColor="@color/box_background"
                app:boxStrokeColor="@color/box_stroke"
                app:boxStrokeWidth="0dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/color_icon"
                app:errorEnabled="true"
                app:errorIconTint="@color/error"
                app:errorTextColor="@color/error"
                app:helperTextEnabled="false"
                app:hintTextColor="@color/hint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_openChatRoomName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:gravity="center_vertical"
                    android:inputType="textPersonName"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_small"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/cancel"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/text_size_large"
                android:paddingBottom="@dimen/spacing_small"
                android:paddingEnd="@dimen/spacing_medium"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingTop="@dimen/spacing_small"
                app:layout_constraintEnd_toStartOf="@+id/button_complete"
                app:layout_constraintTop_toTopOf="@+id/button_complete" />

            <TextView
                android:id="@+id/button_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium_large"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:paddingBottom="@dimen/spacing_small"
                android:paddingEnd="@dimen/spacing_medium"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingTop="@dimen/spacing_small"
                android:text="@string/complete"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/text_size_large"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_openChatRoomName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>