<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/sign_in"/>

        <LinearLayout
            android:id="@+id/linearLayout_facebookLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium_large"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <ImageButton
                android:id="@+id/imageButton_FacebookLogin"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_facebook_48"
                tools:ignore="ContentDescription"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_size_medium"
                android:layout_marginStart="@dimen/text_size_medium"
                android:gravity="center_vertical"
                android:text="@string/facebook_login"
                android:textSize="@dimen/text_size_medium_large"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout_googleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium_large"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_facebookLogin">

            <ImageButton
                android:id="@+id/imageButton_googleSignIn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_google_48"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_size_medium"
                android:layout_marginStart="@dimen/text_size_medium"
                android:gravity="center_vertical"
                android:text="@string/google_sign_in"
                android:textSize="@dimen/text_size_medium_large"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_kakaoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium_large"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_googleSignIn">

            <ImageButton
                android:id="@+id/imageButton_kakaoLogin"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_kakaotalk_logo_icon_48"
                tools:ignore="ContentDescription"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_size_medium"
                android:layout_marginStart="@dimen/text_size_medium"
                android:gravity="center_vertical"
                android:text="@string/kakao_login"
                android:textSize="@dimen/text_size_medium_large"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_naverLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium_large"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_kakaoLogin">

            <ImageButton
                android:id="@+id/imageButton_naverLogin"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_log_in_with_naver_icon_green"
                tools:ignore="ContentDescription"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_size_medium"
                android:layout_marginStart="@dimen/text_size_medium"
                android:gravity="center_vertical"
                android:text="@string/naver_login"
                android:textSize="@dimen/text_size_medium_large"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>