<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_background_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_phoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:gravity="center_vertical"
                android:hint="@string/phone_number"
                app:boxBackgroundColor="@color/box_background"
                app:boxStrokeColor="@color/box_stroke"
                app:boxStrokeWidth="0dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/color_icon"
                app:errorEnabled="true"
                app:errorIconTint="@color/error"
                app:errorTextColor="@color/error"
                app:helperTextEnabled="false"
                app:hintTextColor="@color/hint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_sendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_phoneNumber" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:id="@+id/textInputLayout_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_large"
                android:gravity="center_vertical"
                android:hint="@string/enter_code"
                app:boxBackgroundColor="@color/box_background"
                app:boxStrokeColor="@color/box_stroke"
                app:boxStrokeWidth="0dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/color_icon"
                app:errorEnabled="true"
                app:errorIconTint="@color/error"
                app:errorTextColor="@color/error"
                app:helperTextEnabled="false"
                app:hintTextColor="@color/hint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_sendCode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_code" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>