<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:elevation="4dp"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:id="@+id/relativeLayout_profilePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="224dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/image_profilePhotoBackground"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/background_profile"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/image_profilePhoto"
                        android:layout_width="112dp"
                        android:layout_height="112dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/spacing_medium_large"
                        android:elevation="2dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_round_account_circle_96"
                        tools:ignore="ContentDescription" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:gravity="center_vertical"
                    android:hint="@string/name"
                    app:boxBackgroundColor="@color/box_background"
                    app:boxStrokeColor="@color/box_stroke"
                    app:boxStrokeWidth="0dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/color_icon"
                    app:errorEnabled="true"
                    app:errorIconTint="@color/error"
                    app:errorTextColor="@color/error"
                    app:helperTextEnabled="false"
                    app:hintTextColor="@color/hint_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/relativeLayout_profilePhoto">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_small"
                        android:gravity="center_vertical"
                        android:inputType="textPersonName"
                        android:textColor="@color/color_text"
                        android:textSize="@dimen/text_size_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <cdflynn.android.library.checkview.CheckView
                    android:id="@+id/checkView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:checkView_strokeColor="@color/green"
                    app:checkView_strokeWidth="@dimen/check_stroke_width"
                    app:layout_constraintBottom_toBottomOf="@+id/button_verification"
                    app:layout_constraintEnd_toStartOf="@+id/button_verification"
                    app:layout_constraintTop_toTopOf="@+id/button_verification" />


                <Button
                    android:id="@+id/button_verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium_large"
                    android:text="@string/verification"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout_name" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium_large"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_verification">

                    <Button
                        android:id="@+id/button_cancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:layout_weight="1"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/button_complete"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_small"
                        android:layout_weight="1"
                        android:text="@string/complete" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>